# pgMappingCooperativo

./: .gitignore  CMakeLists.txt  CTestConfiguration.ini  README.md  README.txt  package.xml  pgmch  test_driver.sh  test_loop.sh  test_once.sh
.cache/clangd/index/: CentralModule.cpp.CA2EFBF94137C8E0.idx  CentralModule.h.A688C2CF481CD374.idx  CentralModule_Node.cpp.422FBC9062148BBA.idx  GVD.cpp.E6CF6DD8A7ECB5C6.idx  GVD.h.1070755F726E11A8.idx  GlobalParameters.h.9AF0722EBD34B109.idx  MapMerger.cpp.808AE1458198F1C4.idx  MapMerger.h.82144B26A53491C8.idx  Map_Merger_Node.cpp.342FB72C9D8A5D1A.idx  Robot.cpp.5FDD143C67729FA4.idx  Robot.h.35A098FD7EE4B108.idx  RobotNode.cpp.FD4D17984517F2EA.idx  TCPClient.cpp.442DF3924E2A1E53.idx  TCPClient.h.E456EB261769C9AB.idx  auction.h.7F2A3E6231FBF109.idx  conversion.h.F9DC8B635738745F.idx  end_module.cpp.FE3514F34B211C50.idx  gnuplot.h.78B111E64E02D747.idx  move_controller.cpp.D67FABF33EAD977D.idx  rviz.h.83C573B256D74EA5.idx  (+1 more)
.clangd/index/: CentralModule.cpp.CA2EFBF94137C8E0.idx  CentralModule.h.A688C2CF481CD374.idx  CentralModule_Node.cpp.422FBC9062148BBA.idx  GVD.cpp.E6CF6DD8A7ECB5C6.idx  GVD.h.1070755F726E11A8.idx  GlobalParameters.h.9AF0722EBD34B109.idx  MapMerger.cpp.808AE1458198F1C4.idx  MapMerger.h.82144B26A53491C8.idx  Map_Merger_Node.cpp.342FB72C9D8A5D1A.idx  Robot.cpp.5FDD143C67729FA4.idx  Robot.h.35A098FD7EE4B108.idx  RobotNode.cpp.FD4D17984517F2EA.idx  TCPClient.cpp.442DF3924E2A1E53.idx  TCPClient.h.E456EB261769C9AB.idx  auction.h.7F2A3E6231FBF109.idx  conversion.h.F9DC8B635738745F.idx  end_module.cpp.FE3514F34B211C50.idx  gnuplot.h.78B111E64E02D747.idx  move_controller.cpp.D67FABF33EAD977D.idx  rviz.h.83C573B256D74EA5.idx  utils.h.56ECFB093070BDCB.idx
atomic_configure/: .rosinstall  local_setup.sh  setup.sh
bags/: printer.py
catkin_generated/: generate_cached_setup.py  package.cmake  pgmappingcooperativo-msg-extras.cmake.develspace.in  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
catkin_generated/installspace/: _setup_util.py  pgmappingcooperativo-msg-extras.cmake  pgmappingcooperativo-msg-paths.cmake  pgmappingcooperativo.pc  pgmappingcooperativoConfig.cmake
cmake/: pgmappingcooperativo-genmsg-context.py  pgmappingcooperativo-genmsg.cmake
config/: rosbagtopics
config/move_base/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  p3dx_0_costmap_common_params.yaml  p3dx_1_costmap_common_params.yaml  p3dx_2_costmap_common_params.yaml  p3dx_3_costmap_common_params.yaml  p3dx_4_costmap_common_params.yaml
data_wo_bags/control/: info
devel/: .catkin
formatoSpringer/: samplepaper.aux  samplepaper.tex
launch/: multirobot.launch  one_robot.launch  one_robot_new.launch  tscf_multirobot.launch
logFiles_GVD1/: office_GVD_graph.png_0
logFiles_bkp5/: office_GVD_plot_script  office_plot_script
logFiles_con_scripts/: labyrinth_plot_script
logFiles_final/: plot_cfg
maps/office/: 0_250000m.pgm  0_250000m.yaml  0_250m.yaml  0_315000m.pgm  0_315000m.yaml  0_333333m.pgm  0_333333m.yaml  0_40m.yaml  0_500000m.yaml  0_500m.pgm  0_500m.yaml  0_50m.pgm  0_60m.pgm  0_60m.yaml  0_75m.pgm  0_80m.yaml  1_000000m.pgm  1_000000m.yaml  1_000m.yaml  1_00m.yaml
models/willowgarage/: model.sdf
morse/: labyrinth1.py  labyrinth2.py  labyrinth4.py  labyrinth5.py  multirobot.py  office.py  office1.py  office2.py  office3.py  office4.py
morse/scenarios/: office.blend1  office.yaml
msg/: Assignment.msg  Auction.msg  Bid.msg  Edge.msg  FrontierBid.msg  GoalList.msg  Graph.msg  MapMergedInfo.msg  Polygon2D.msg  PolygonalMap.msg  RobotReport.msg  SegmentAssignment.msg  SegmentAuction.msg  SegmentAuctionC.msg  SegmentBid.msg  asignacion.msg  asignacionCelda.msg  frontierReport.msg  infoCentro.msg  mapMergedInfo.msg  resumenInstancia.msg  takeobjetive.msg
rviz/: inco.rviz  office.rviz  office2.rviz  office3.rviz  office_replay.rviz
scripts/: log_digester.py  log_digester_robots.py  pgmch  plotter_histo.py  plotter_histo_num.py  plotter_line.py  process_logs  table_gen.py  test_driver  test_driver_robots  test_driver_rr  test_driver_rr_robots
src/: .clang-format  EndModule.cpp  GlobalParameters.h  TODO  conversion.cpp  endModule.cpp  end_module.cpp  rviz.cpp  utils.cpp
src.old/: end_module.cpp
src.old/CentralModule/: CentralModule.h  CentralModule_Node.cpp
src.old/PoligonalMap/: PoligonalMap.h
src.old/Robot/: RobotNode.cpp
src/CentralModule/: CentralModule.cpp  CentralModule.h  CentralModuleNode.cpp  CentralModule_Node.cpp
src/GVD/: GVD.cpp  GVD.h  map.txt  test.cpp
src/MapMerger/: MapMerger.cpp  MapMerger.h  MapMergerNode.cpp
src/Map_Merger/: MapMerger.cpp  MapMerger.h  Map_Merger_Node.cpp
src/MoveController/: MoveController.cpp  TCPClient.cpp  TCPClient.h  move_controller.cpp
src/PoligonalMap/: PoligonalMap.h
src/Robot/: Robot.cpp  Robot.h  RobotNode.cpp  buckup
src/gvd/: .gitignore  CMakeLists.txt  gvd.cpp  gvd.h  heap.h  test.cpp
src/lib/: Auctioneer.h  IncrementalMap.cpp  IncrementalMap.h  RvizHelper.cpp  RvizHelper.h  affinity_propagation.h  auction.h  conversion.h  rviz.h  utils.h
src/lib/GVD/: .gitignore  CMakeLists.txt  GVD.cpp  GVD.h  backup  test  test.cpp  tests
src/lib/GVD/src/: ConnectedComponents.cpp  ConnectedComponents.h  ConnectedComponets.cpp  ConnectedComponets.h  DistMap.cpp  DistMap.h  GVD.cpp  GVD.h  Grid.h  Gvd.cpp  Gvd.h  GvdConfig.cpp  GvdConfig.h  Map.cpp  Map.h  TopoMap.cpp  TopoMap.h  config.cpp  config.h  grid.todaviano  utils.h
src/lib/GVD/src/data/: Graph.h  Grid.h  Num.h  Pos.cpp  Pos.h  Queue.h  Vector2.cpp  Vector2.h
tf/: frames.gv
urdf/: pioneer3dx.xacro  pioneer3dx_wheel.xacro
utils/: frames.gv
worlds/: inco.world  office.world  officeStatic.world  officeV10.world  officeV11.world  officeV12.world  officeV13.world  officeV1_OGP.world  officeV2.world  officeV3.world  officeV4.world  officeV5.world  officeV6.world  officeV7.world  officeV7_OGPs.world  officeV8.world  officeV9.world  office_OGP.world  office_old.world  office_old_1.world  office_old_2.world
(+8560 files in other folders)
