<?xml version="1.0"?>
<package>
  <name>pgmappingcooperativo</name>
  <version>0.0.0</version>
  <description>The pgmappingcooperativo package</description>

  <maintainer email="fciuffardi@fing.edu.uy">Federico Ciuffardi</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/pgmappingcooperativo</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>p3dx_description</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>p3dx_description</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- <gazebo_ros gazebo_model_path="${prefix}/models"/> -->
  </export>

</package>
